# Codexhjjj

./: Cargo.toml  Dockerfile  launch.sh  syd.sh
.github/workflows/: build.yml
apps/codex-plus-manager/: package-lock.json  package.json
apps/codex-plus-manager/src/: App.ts  App.tsx  main.tsx  styles.css
apps/codex-plus-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/codex-plus-manager/src-tauri/src/: commands.rs  install.rs  lib.rs
crates/codex-plus-core/src/: app_paths.rs  protocol_proxy.rs  settings.rs  version.rs
crates/codex-plus-core/tests/: launcher.rs  protocol_proxy.rs
