[package]
name = "codex-plus-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "codex_plus_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "codex-plus-plus-manager"
path = "src/main.rs"

[dependencies]
codex-plus-core = { path = "../../../crates/codex-plus-core" }
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
